--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "moment": "~2.7.0",
-    "event-stream": "~3.1.5"
+    "event-stream": "~3.1.5",
+    "async": "~0.9.0",
+    "slice-file": "~0.2.1"
   }
 }
